third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_character_non_ascii.exp

Diagnostics:
error: invalid character
  ┌─ tests/more-v1/parser/invalid_character_non_ascii.move:5:4
  │
5 │    ф
  │    ^ Invalid character 'ф' found when reading file. Only ASCII printable characters, tabs (\t), lf (\n) and crlf (\r\n) are permitted.
